# video-link-parser

./: README.md  app.py  pyproject.toml
templates/: index.html
